--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ in the head of your doc
 
    </div>
  </div>
-<script src="script_own.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
