--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ in the head of your doc
  <div class= "container">
    <div class="display">
      <div class="disp-container">
-       <div id="process"></div>
+       <div id="calculation"></div>
        <div id="result">0</div>
      </div>
    </div>
@@ -24,24 +24,24 @@ in the head of your doc
      <button class="number" value="7">7</button>
      <button class="number" value="8">8</button>
      <button class="number" value="9">9</button>
-     <button class="operator calc" data-action="add" value="+">+</button>
+     <button class="operator calc" value="+">+</button>
 
      <button class="number" value="4">4</button>
      <button class="number" value="5">5</button>
      <button class="number" value="6">6</button>
-     <button class="operator calc" data-action="subtract" value="-">-</button>
+     <button class="operator calc"  value="-">-</button>
 
      <button class="number" value="3">3</button>
      <button class="number" value="2">2</button>
      <button class="number" value="1">1</button>
-     <button class="operator calc" data-action="multiply"value="*">*</button>
+     <button class="operator calc" value="*">*</button>
 
      <button class="decimal" value=".">.</button>
      <button class="number" value="0">0</button>
      <button id="clear" value ="clear">AC</button>
-     <button class="operator calc" data-action="divide" value="/">/</button>
+     <button class="operator calc"  value="/">/</button>
 
-     <button class="operator equal" id="evaluate" data-action="calculate" value="="/>=</button>
+     <button class="operator equal" id="evaluate" value="="/>=</button>
 
    </div>
  </div>
